fixed button color on iphone

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
         }
     #result {
         height: 45px; 
-        font-size: 26px;
+        font-size: 23px;
         }
     #backing {
         width: 375px;
